[package]
name = "twitter-streams"
version = "0.1.0"
authors = ["Akhil Velagapudi <akhilvelagapudi@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "=0.10.0-alpha.1", features = ["json", "gzip"] }
tokio = { version = "=0.2.0-alpha.6" }
bytes = "0.4"
percent-encoding = "2.1"
ring = "0.16"
hex = "0.4"
base64 = "0.11"
futures = { version = "0.3.0-alpha.19", package = "futures-preview" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
circular-queue = "0.2"
regex = "1.0"
warp = { git = "https://github.com/seanmonstar/warp.git" }
once_cell = "1.2"
